refactor: 정적 리소스 읽기 방식 통일
- 텍스트 파일과 바이너리 파일 모두 Files.readAllBytes를 사용하도록 통일
- ContentType의 바이너리 확인 메서드 제거